--- a/css/servicios.css
+++ b/css/servicios.css
@@ -23,6 +23,10 @@ body {
     --white: #FFFFFF;
 }
 
+img{
+    max-width: 100%;
+}
+
 header {
     background-color: var(--primary);
     display: flex;
@@ -130,6 +134,7 @@ button {
 
     .clientes-wrapper {
         display: flex;
+        justify-content: center;
         flex-wrap: wrap;
         gap: 1rem;
     }
@@ -142,6 +147,11 @@ button {
     align-items: center;
     gap: .5rem;
 
+    &>h2,
+    &>p {
+        text-align: center;
+    }
+
     &>p {
         margin-bottom: 1rem;
     }
@@ -150,7 +160,7 @@ button {
         width: 100%;
         max-width: 1240px;
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
         gap: 2rem;
     }
 
@@ -159,14 +169,14 @@ button {
         border-radius: 18px;
         border: 1px solid #CCD1EE;
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
         gap: 1rem;
         transition: all ease .3s;
 
         .content {
             display: flex;
             flex-direction: column;
-            gap: .5rem;
+            gap: 1rem;
 
             .btn {
                 margin-top: auto;
@@ -231,4 +241,59 @@ footer .follow p {
 footer .follow .redes {
     display: flex;
     gap: 10px;
+}
+
+
+@media screen and (max-width: 1100px) {
+    .container{
+        padding-left: 20px;
+        
+        .text-1{
+            font-size: 24px;
+        }
+
+        .text-2{
+            font-size: 14px;
+        }
+    }
+
+    #clientes,
+    #servicios {
+        padding: 2rem 1.5rem;
+    }
+
+    #servicios {
+        .service-card {
+            grid-template-columns: repeat(1, minmax(0, 1fr));
+            gap: 1.5rem;
+        }
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+    #servicios {
+        .service-card__wrapper {
+            grid-template-columns: repeat(1, minmax(0, 1fr));
+        }
+
+        .service-card {
+            grid-template-columns: repeat(2, minmax(0, 1fr));
+            gap: 1.5rem;
+
+            .content{
+                font-size: 14px;
+            }
+        }
+    }
+
+}
+
+@media screen and (max-width: 500px) {
+    #servicios {
+        .service-card {
+            grid-template-columns: repeat(1, minmax(0, 1fr));
+        }
+    }
+
 }
