--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-*{
+* {
     padding: 0;
     margin: 0;
 }
 
-html, body {
+html,
+body {
     min-height: 100vh;
     margin: 0;
     display: flex;
@@ -15,19 +16,20 @@ html, body {
 }
 
 body {
-    flex-grow: 1; /* Hace que el contenido principal crezca para llenar el espacio disponible */
+    flex-grow: 1;
+    /* Hace que el contenido principal crezca para llenar el espacio disponible */
 }
 
-:root{
-    --primary : #0552A0;
-    --secunday : #2A82DB;
-    --terciary : #8BC1F8;
+:root {
+    --primary: #0552A0;
+    --secunday: #2A82DB;
+    --terciary: #8BC1F8;
 
-    --dark : #000000;
-    --white : #FFFFFF;
+    --dark: #000000;
+    --white: #FFFFFF;
 }
 
-header{
+header {
     background-color: var(--primary);
     display: flex;
     justify-content: space-between;
@@ -38,34 +40,34 @@ header{
     padding-right: 50px;
 }
 
-nav .activado{
+nav .activado {
     background-color: var(--secunday);
     padding: 20px 40px 20px 40px;
 }
 
-nav .desactivado{
+nav .desactivado {
     background-color: var(--primary);
     padding: 20px 40px 20px 40px;
     font-weight: 600;
 }
 
-nav ul{
+nav ul {
     display: flex;
     gap: 50px;
 }
 
-nav li{
+nav li {
     color: var(--white);
     list-style-type: none
 }
 
-nav a{
+nav a {
     text-decoration: none;
     color: var(--white);
     font-family: Montserrat;
 }
 
-.container{
+.container {
     flex: 1;
     display: flex;
     justify-content: center;
@@ -75,7 +77,7 @@ nav a{
     padding-bottom: 50px;
 }
 
-.container h1{
+.container h1 {
     font-style: italic;
     text-align: center;
     font-family: Montserrat;
@@ -85,18 +87,18 @@ nav a{
     width: 360px;
 }
 
-.container hr{
+.container hr {
     border-color: var(--primary);
 }
 
-.container .card{
+.container .card {
     display: flex;
     gap: 60px;
     padding-top: 40px;
     align-items: center;
 }
 
-.container .card p{
+.container .card p {
     padding-top: 20px;
     text-align: center;
     font-family: Montserrat;
@@ -105,30 +107,30 @@ nav a{
     font-weight: 400;
 }
 
-.block-1{
+.block-1 {
     padding-top: 100px;
     padding-bottom: 100px;
 }
 
-.vectores{
+.vectores {
     gap: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.vector-circulo{
+.vector-circulo {
     display: flex;
 }
 
-.vectores .vector-text{
+.vectores .vector-text {
     font-family: Montserrat;
     color: var(--primary);
     font-size: 24px;
     font-weight: 600;
 }
 
-.descripcion{
+.descripcion {
     padding-top: 50px;
     gap: 100px;
     align-items: center;
@@ -137,25 +139,25 @@ nav a{
 }
 
 
-.descripcion p{
+.descripcion p {
     color: var(--dark);
     font-family: Montserrat;
     font-size: 16.3px;
     font-weight: 400;
-    width: 626px;
+    max-width: 626px;
     padding-bottom: 20px;
 }
 
 
 
-.block-3{
+.block-3 {
     padding-top: 50px;
     padding-bottom: 50px;
     display: flex;
     justify-content: center;
 }
 
-.block-3 div{
+.block-3 div {
     width: 1236px;
     height: 244px;
     background-image: url("../img/inicio/bloque3.png");
@@ -171,7 +173,7 @@ nav a{
     align-items: flex-end;
 }
 
-.block-3 div p{
+.block-3 div p {
     color: var(--white);
     font-family: Montserrat;
     font-weight: 600;
@@ -179,7 +181,7 @@ nav a{
     padding-bottom: 20px;
 }
 
-.block-3 button{
+.block-3 button {
     width: 136px;
     height: 36px;
     cursor: pointer;
@@ -193,7 +195,7 @@ nav a{
 }
 
 
-footer{
+footer {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -206,12 +208,12 @@ footer{
     flex-shrink: 0;
 }
 
-footer .links{
+footer .links {
     display: flex;
     gap: 70px;
 }
 
-footer .links a{
+footer .links a {
     color: var(--white);
     text-decoration: none;
     font-family: Montserrat;
@@ -219,7 +221,7 @@ footer .links a{
     font-size: 16px;
 }
 
-footer .follow{
+footer .follow {
     justify-content: center;
     align-items: center;
     display: flex;
@@ -227,7 +229,7 @@ footer .follow{
     gap: 20px;
 }
 
-footer .follow p{
+footer .follow p {
     color: var(--white);
     text-decoration: none;
     font-family: Montserrat;
@@ -235,7 +237,34 @@ footer .follow p{
     font-size: 16px;
 }
 
-footer .follow .redes{
+footer .follow .redes {
     display: flex;
     gap: 10px;
+}
+
+@media screen and (max-width:768px) {
+
+    .container{
+        padding: 2rem 1.5rem;
+    }
+
+    img{
+        max-width: 100%;
+    }
+
+    .container .card{
+        display: grid;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+
+    .block-1 {
+        padding-bottom: 2rem;
+    }
+
+    .descripcion {
+        padding: 2rem 1.5rem;
+        gap: 2rem;
+        display: flex;
+        flex-direction: column;
+    }
 }
