--- a/css/servicios.css
+++ b/css/servicios.css
@@ -251,7 +251,7 @@ footer .follow .redes {
 
 @media screen and (max-width: 1100px) {
     .container{
-        padding-left: 20px;
+        padding: 2rem 1.5rem;
         
         .text-1{
             font-size: 24px;
